# akamai-sre-home-assignment

./: .env  Dockerfile  Makefile  README.md  commands  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: e2e.yaml
app/: database.py  exceptions.py  main.py  models.py
app/src/: cache.py  characters.py  database.py  exceptions.py  healthcheck.py  main.py  models.py  utils.py
app/tests/: cache_test.py  characters_test.py  database_test.py  healthcheck_test.py  main_test.py
clusters/staging/: apps.yaml
deploy/flux/: kustomization.yaml  postgres.yaml  rbac.yaml
deploy/flux/demo/: app.yaml  redis.yaml
deploy/flux/ingress-nginx/: ingress-nginx.yaml  kustomization.yaml
deploy/flux/prerequisites/ingress-nginx/: ingress-nginx.yaml
deploy/flux/prerequisites/metrics-server/: kustomization.yaml  metrics-server.yaml
deploy/helm/app/: Chart.yaml  values.yaml
deploy/helm/postgres/: Chart.yaml  values.yaml
deploy/helm/redis/: Chart.yaml  values.yaml
etc/dashboards/: fastapi-observability.json
etc/prometheus/: alerts.yaml  prometheus.yml
src/akamai_sre_home_assignment/: main.py
