[project]
name = "akamai-sre-home-assignment"
version = "0.1.0"
description = ""
authors = [
    {name = "forselli",email = "franciscoorselli@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "httpx (>=0.27.0,<0.28.0)",
    "python-dotenv (>=1.0.1,<1.1.0)",
    "uvicorn (>=0.27.1,<0.28.0)",
    "fastapi-pagination (>=0.12.17,<0.13.0)"
]

[tool.poetry]
packages = [{include = "akamai_sre_home_assignment", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
