[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "forselli",email = "franciscoorselli@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "httpx (>=0.27.0,<0.28.0)",
    "uvicorn (>=0.27.1,<0.28.0)",
    "redis (>=5.2.1,<6.0.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "psycopg2-binary (>=2.9.9,<3.0.0)",
    "tenacity (>=8.2.0,<9.0.0)",
    "fastapi-pagination (>=0.12.34,<0.13.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "opentelemetry-api (>=1.31.1,<2.0.0)",
    "opentelemetry-exporter-otlp (>=1.31.1,<2.0.0)",
    "opentelemetry-instrumentation (>=0.52b1,<0.53)",
    "opentelemetry-instrumentation-fastapi (>=0.52b1,<0.53)",
    "opentelemetry-instrumentation-logging (>=0.52b1,<0.53)",
    "prometheus-client (>=0.21.1,<0.22.0)",
    "pytest (>=8.3.5,<9.0.0)",
]

[tool.poetry]
packages = [{include = "app"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]